<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cadastroCompraVenda"
        android:textSize="30dp"
        android:fontFamily="@font/ralewayheavy"
        android:gravity="left"
        android:layout_marginBottom="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioGroup
            android:id="@+id/compraOuVenda_question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/radioBt_venda"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/venda"/>

            <RadioButton
                android:id="@+id/radioBt_compra"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/compra"/>


        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tipoVeiculo"
            android:textSize="25dp"
            android:layout_weight="1"/>
        <EditText
            android:id="@+id/ET_tipoVeiculo"
            android:layout_width="500dp"
            android:layout_height="wrap_content"
            android:textSize="25dp"
            android:gravity="start"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/modeloVeiculo"
            android:textSize="25dp"
            android:layout_weight="1"/>
        <EditText
            android:id="@+id/ET_modeloVeiculo"
            android:layout_width="500dp"
            android:layout_height="wrap_content"
            android:textSize="25dp"
            android:gravity="start"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/marcaVeiculo"
            android:textSize="25dp"
            android:layout_weight="1"/>
        <EditText
            android:id="@+id/ET_marcaVeiculo"
            android:layout_width="500dp"
            android:layout_height="wrap_content"
            android:textSize="25dp"
            android:gravity="start"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/anoVeiculo"
            android:textSize="25dp"
            android:layout_weight="1"/>
        <EditText
            android:id="@+id/ET_anoVeiculo"
            android:inputType="number"
            android:layout_width="500dp"
            android:layout_height="wrap_content"
            android:textSize="25dp"
            android:gravity="start"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/valorVeiculo"
            android:textSize="25dp"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/real"
            android:textSize="25dp"
            android:layout_weight="1"/>
        <EditText
            android:id="@+id/ET_valorVeiculo"
            android:inputType="number"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:textSize="25dp"
            android:gravity="start"
            android:layout_weight="1"/>
    </LinearLayout>

    <Button
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:onClick="NewItem"
        android:text="Adicionar novo item"
        android:fontFamily="@font/ralewayheavy"
        android:textSize="22dp" />


</LinearLayout>